--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-   
+    <div>
+        <input type="color" id="color">
+    </div>
 </body>
 </html>
